# razmetka-auth-service

./: .env.local  docker-compose.yml  initdb.sql  pyproject.toml
docker/: Dockerfile
migrations/: env.py
migrations/versions/: 1df206bcdd91_add_user_task_type_access.py  be1eb9cf43f2_init.py  e597ad0fd861_roles_data_migration.py
src/: main.py
src/api/: auth.py  schemas.py
src/domain/: __init__.py  database.py  exceptions.py
src/service/: exceptions.py  user.py
src/settings/: config.py
src/utils/: password.py
